--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>taxi</title>
+    <title>TAXi</title>
 </head>
 
 <body>
     <h1>Taxi</h1>
     <h2>Bienvenido a la aplicacion de taxi</h2>
-    <script src="./dist/index.js" type="commonjs"></script>
+    <script src="./dist/index.js" type="module"></script>
     <div id="salida"></div>
 
 </body>
